Screnshots of graphs have been added to the README. And seprate directory for screenshots of graphs has been created. Project is Complete from my side. Others can review and see if any changes required.

--- a/OS Project.ipynb
+++ b/OS Project.ipynb
@@ -3083,12 +3083,13 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "lOz1L2xYEDXM"
    },
    "source": [
-    "#**Selection Sort**"
+    "# **Selection Sort**"
    ]
   },
   {
@@ -4103,12 +4104,13 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "J4odsaCKEZQF"
    },
    "source": [
-    "#**Shell Sort**"
+    "# **Shell Sort**"
    ]
   },
   {
